Remvoal of not needed HTML elements Fix for some layout issues

--- a/styles/components/boards/_overhead-platform.scss
+++ b/styles/components/boards/_overhead-platform.scss
@@ -17,7 +17,7 @@
 
     .trains {
         display: grid;
-        grid-template-columns: auto auto 1fr auto;
+        grid-template-columns: auto auto 1fr minmax(max-content, 6em);
         gap: var(--board-gap);
         margin: var(--board-content-spacing);
 
@@ -41,10 +41,15 @@
                 display: block;
                 grid-column: 4;
                 grid-row: 1;
+                text-align: right;
             }
 
             &:not(:has(.on-time)):after {
                 color: var(--board-cancel-color);
+            }
+            station{
+                display: grid;
+                grid-template-columns: subgrid;
             }
 
             [itemprop="arrivalStation"]{
